--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!doctype html>
 <html>
   <head>
-    <title>Tory Lysik SNL Project/title>
+    <title>Tory Lysik SNL Project<title>
   </head>
-
   </p>
 Sketch comedy is notorious for hit or miss jests, with standing ovations or crickets depending on the actor’s last words. 
 
