--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title> Tory Lysik SNL Project <title>
+    <title> Tory Lysik SNL Project </title>
   </head>Sketch comedy is notorious for hit or miss jests, with standing ovations or crickets depending on the actor’s last words. 
 
 The actor’s double entendre’s serve to entertain the audience. But what makes a Saturday Night Live episode? What elements create the best atmosphere for a guaranteed laugh? 
