--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
-	<head>  <title> Tory Lysik SNL Project </title></head>
-  <head>Sketch comedy is notorious for hit or miss jests, with standing ovations or crickets depending on the actor’s last words. 
+	<head><title> Tory Lysik SNL Project </title></head>
+  <body>Sketch comedy is notorious for hit or miss jests, with standing ovations or crickets depending on the actor’s last words. 
 
 The actor’s double entendre’s serve to entertain the audience. But what makes a Saturday Night Live episode? What elements create the best atmosphere for a guaranteed laugh? 
 
@@ -15,7 +15,7 @@ Many of the cast members and writers have become considerably the greatest Ameri
 
 The first few years of SNL were fabulous, with their first six episodes being in the top 25. They hit a fault, then a fluke with season 21. From there, the ratings only grew. 
 here the data is : --snldata-1.ipynb--
-</head>
+  </body>
 
 
 
